ecmascript/parser/tests/test262-error-references/fail/b3fc8ced7ce28c35.js.stderr
error: Expected 2 hex characters
 --> $DIR/tests/test262-parser/fail/b3fc8ced7ce28c35.js:1:3
  |
1 | ('\x')
  |   ^^

